<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/SpotPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Spot"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/SpotPositionX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="none" />

        <EditText
            android:id="@+id/SpotPositionY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="none" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/UserPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/User"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/UserPositionX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Null"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/UserPositionY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Null"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/AzimuthLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Azimuth"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/Azimuth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/ScanButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Scan" />

    <TextView
        android:id="@+id/Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Null"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/ExhibitInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Null"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>